Added More Comments to FunSearch Notebook + README

--- a/examples/FunSearch/FunSearch.ipynb
+++ b/examples/FunSearch/FunSearch.ipynb
@@ -192,8 +192,10 @@
     "from aiflows.utils.colink_utils import start_colink_server\n",
     "from aiflows import flow_verse\n",
     "from aiflows.utils import logging\n",
-    "#setting verbosity to warning because of the large amount of logs (seems to create issues in notebook)\n",
+    "#setting verbosity to warning because of the large amount of logs (seems to create lagging in notebook)\n",
     "logging.set_verbosity_warning()\n",
+    "#If you want to see more logs, you can set the verbosity to info by uncommenting the following line\n",
+    "#logging.set_verbosity_info()\n",
     "import json\n",
     "from aiflows.utils import serving\n",
     "import os\n",
@@ -219,6 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Start Local Colink Server\n",
     "cl = start_colink_server()"
    ]
   },
@@ -1474,7 +1477,7 @@
    "source": [
     "#### Query Best Solutions (Run as many times as you like)\n",
     "\n",
-    "For cost reasons, we will not run the search process here. But you can run the search process by calling the `start` method."
+    "For cost reasons, we will not run the search process here. But you can run the search process by calling the `start` method. We might run the search process in the future and update this notebook."
    ]
   },
   {
