more comments in FUnsearch nb

--- a/examples/FunSearch/FunSearch.ipynb
+++ b/examples/FunSearch/FunSearch.ipynb
@@ -24,7 +24,12 @@
     "\n",
     "[1] DeepMind, 2023. [\"FunSearch: Making new discoveries in mathematical sciences using Large Language Models\"](https://deepmind.google/discover/blog/funsearch-making-new-discoveries-in-mathematical-sciences-using-large-language-models/)\n",
     "\n",
-    "[2] [Romera-Paredes, Bernardino, Mohammadamin Barekatain, Alexander Novikov, Matej Balog, M. Pawan Kumar, Emilien Dupont, Francisco JR Ruiz et al. \"Mathematical discoveries from program search with large language models.\" Nature 625, no. 7995 (2024): 468-475](https://www.nature.com/articles/s41586-023-06924-6)"
+    "[2] [Romera-Paredes, Bernardino, Mohammadamin Barekatain, Alexander Novikov, Matej Balog, M. Pawan Kumar, Emilien Dupont, Francisco JR Ruiz et al. \"Mathematical discoveries from program search with large language models.\" Nature 625, no. 7995 (2024): 468-475](https://www.nature.com/articles/s41586-023-06924-6)\n",
+    "\n",
+    "⚠️ **Warning**:\n",
+    "\n",
+    " This notebook utilizes GPT-4, which incurs a usage cost. Please ensure you're aware of any associated charges before running the code in this notebook.\n",
+    "\n"
    ]
   },
   {
@@ -1351,7 +1356,10 @@
     "                }\n",
     "            },\n",
     "            \"backend\": {\n",
-    "                \"api_infos\": \"???\" # We will add API info after\n",
+    "                \"api_infos\": \"???\", # We will add API info after\n",
+    "                \"model_name\": {\n",
+    "                    \"openai\": \"gpt-4\", #Follows litellm model naming (see ChatFlowModule)\n",
+    "                }\n",
     "            }\n",
     "        },\n",
     "        \"EvaluatorFlow\": {\n",
